lab6/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instruction instructions
Rule 5     instructions -> instruction
Rule 6     instruction -> expression
Rule 7     instruction -> assignment ;
Rule 8     instruction -> ifexpr
Rule 9     instruction -> loop
Rule 10    instruction -> returnexpr ;
Rule 11    instruction -> printexpr ;
Rule 12    instruction -> breakOrContinue ;
Rule 13    instruction -> complexinstruction
Rule 14    breakOrContinue -> brk
Rule 15    breakOrContinue -> cnt
Rule 16    brk -> BREAK
Rule 17    cnt -> CONTINUE
Rule 18    complexinstruction -> { instructions }
Rule 19    assignment -> assignable = expression
Rule 20    assignment -> assignable ADDASSIGN expression
Rule 21    assignment -> assignable SUBASSIGN expression
Rule 22    assignment -> assignable MULASSIGN expression
Rule 23    assignment -> assignable DIVASSIGN expression
Rule 24    assignable -> ID
Rule 25    assignable -> ID [ expression , expression ]
Rule 26    expression -> binexp
Rule 27    expression -> transpose
Rule 28    expression -> num
Rule 29    expression -> assignable
Rule 30    expression -> str
Rule 31    expression -> special ( expression )
Rule 32    expression -> [ minit ]
Rule 33    expression -> ( expression )
Rule 34    expression -> - expression
Rule 35    str -> STRING
Rule 36    transpose -> expression '
Rule 37    num -> int
Rule 38    num -> float
Rule 39    int -> INTNUM
Rule 40    float -> FLOATNUM
Rule 41    binexp -> mutexp
Rule 42    binexp -> compexp
Rule 43    mutexp -> expression + expression
Rule 44    mutexp -> expression - expression
Rule 45    mutexp -> expression * expression
Rule 46    mutexp -> expression / expression
Rule 47    mutexp -> expression DOTADD expression
Rule 48    mutexp -> expression DOTSUB expression
Rule 49    mutexp -> expression DOTMUL expression
Rule 50    mutexp -> expression DOTDIV expression
Rule 51    compexp -> expression LE expression
Rule 52    compexp -> expression GE expression
Rule 53    compexp -> expression EQ expression
Rule 54    compexp -> expression > expression
Rule 55    compexp -> expression < expression
Rule 56    compexp -> expression DIFF expression
Rule 57    special -> EYE
Rule 58    special -> ZEROS
Rule 59    special -> ONES
Rule 60    minit -> [ matrixcontents ] , minit
Rule 61    minit -> [ matrixcontents ]
Rule 62    minit -> matrixcontents
Rule 63    matrixcontents -> expression
Rule 64    matrixcontents -> expression , matrixcontents
Rule 65    ifexpr -> IF ( expression ) instruction
Rule 66    ifexpr -> IF ( expression ) instruction ELSE instruction
Rule 67    loop -> forloop
Rule 68    loop -> whileloop
Rule 69    forloop -> FOR ID = range instruction
Rule 70    whileloop -> WHILE ( expression ) instruction
Rule 71    range -> expression : expression
Rule 72    returnexpr -> RETURN expression
Rule 73    printexpr -> PRINT printable
Rule 74    printable -> expression
Rule 75    printable -> expression , printable

Terminals, with rules where they appear

'                    : 36
(                    : 31 33 65 66 70
)                    : 31 33 65 66 70
*                    : 45
+                    : 43
,                    : 25 60 64 75
-                    : 34 44
/                    : 46
:                    : 71
;                    : 7 10 11 12
<                    : 55
=                    : 19 69
>                    : 54
ADDASSIGN            : 20
BREAK                : 16
CONTINUE             : 17
DIFF                 : 56
DIVASSIGN            : 23
DOTADD               : 47
DOTDIV               : 50
DOTMUL               : 49
DOTSUB               : 48
ELSE                 : 66
EQ                   : 53
EYE                  : 57
FLOATNUM             : 40
FOR                  : 69
GE                   : 52
ID                   : 24 25 69
IF                   : 65 66
INTNUM               : 39
LE                   : 51
MULASSIGN            : 22
ONES                 : 59
PRINT                : 73
RETURN               : 72
STRING               : 35
SUBASSIGN            : 21
WHILE                : 70
ZEROS                : 58
[                    : 25 32 60 61
]                    : 25 32 60 61
error                : 
{                    : 18
}                    : 18

Nonterminals, with rules where they appear

assignable           : 19 20 21 22 23 29
assignment           : 7
binexp               : 26
breakOrContinue      : 12
brk                  : 14
cnt                  : 15
compexp              : 42
complexinstruction   : 13
expression           : 6 19 20 21 22 23 25 25 31 33 34 36 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 63 64 65 66 70 71 71 72 74 75
float                : 38
forloop              : 67
ifexpr               : 8
instruction          : 4 5 65 66 66 69 70
instructions         : 2 4 18
instructions_opt     : 1
int                  : 37
loop                 : 9
matrixcontents       : 60 61 62 64
minit                : 32 60
mutexp               : 41
num                  : 28
printable            : 73 75
printexpr            : 11
program              : 0
range                : 69
returnexpr           : 10
special              : 31
str                  : 30
transpose            : 27
whileloop            : 68

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment ;
    (8) instruction -> . ifexpr
    (9) instruction -> . loop
    (10) instruction -> . returnexpr ;
    (11) instruction -> . printexpr ;
    (12) instruction -> . breakOrContinue ;
    (13) instruction -> . complexinstruction
    (26) expression -> . binexp
    (27) expression -> . transpose
    (28) expression -> . num
    (29) expression -> . assignable
    (30) expression -> . str
    (31) expression -> . special ( expression )
    (32) expression -> . [ minit ]
    (33) expression -> . ( expression )
    (34) expression -> . - expression
    (19) assignment -> . assignable = expression
    (20) assignment -> . assignable ADDASSIGN expression
    (21) assignment -> . assignable SUBASSIGN expression
    (22) assignment -> . assignable MULASSIGN expression
    (23) assignment -> . assignable DIVASSIGN expression
    (65) ifexpr -> . IF ( expression ) instruction
    (66) ifexpr -> . IF ( expression ) instruction ELSE instruction
    (67) loop -> . forloop
    (68) loop -> . whileloop
    (72) returnexpr -> . RETURN expression
    (73) printexpr -> . PRINT printable
    (14) breakOrContinue -> . brk
    (15) breakOrContinue -> . cnt
    (18) complexinstruction -> . { instructions }
    (41) binexp -> . mutexp
    (42) binexp -> . compexp
    (36) transpose -> . expression '
    (37) num -> . int
    (38) num -> . float
    (24) assignable -> . ID
    (25) assignable -> . ID [ expression , expression ]
    (35) str -> . STRING
    (57) special -> . EYE
    (58) special -> . ZEROS
    (59) special -> . ONES
    (69) forloop -> . FOR ID = range instruction
    (70) whileloop -> . WHILE ( expression ) instruction
    (16) brk -> . BREAK
    (17) cnt -> . CONTINUE
    (43) mutexp -> . expression + expression
    (44) mutexp -> . expression - expression
    (45) mutexp -> . expression * expression
    (46) mutexp -> . expression / expression
    (47) mutexp -> . expression DOTADD expression
    (48) mutexp -> . expression DOTSUB expression
    (49) mutexp -> . expression DOTMUL expression
    (50) mutexp -> . expression DOTDIV expression
    (51) compexp -> . expression LE expression
    (52) compexp -> . expression GE expression
    (53) compexp -> . expression EQ expression
    (54) compexp -> . expression > expression
    (55) compexp -> . expression < expression
    (56) compexp -> . expression DIFF expression
    (39) int -> . INTNUM
    (40) float -> . FLOATNUM

    $end            reduce using rule 3 (instructions_opt -> .)
    [               shift and go to state 20
    (               shift and go to state 19
    -               shift and go to state 21
    IF              shift and go to state 22
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    {               shift and go to state 29
    ID              shift and go to state 34
    STRING          shift and go to state 35
    EYE             shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    FOR             shift and go to state 39
    WHILE           shift and go to state 40
    BREAK           shift and go to state 41
    CONTINUE        shift and go to state 42
    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    ifexpr                         shift and go to state 7
    loop                           shift and go to state 8
    returnexpr                     shift and go to state 9
    printexpr                      shift and go to state 10
    breakOrContinue                shift and go to state 11
    complexinstruction             shift and go to state 12
    binexp                         shift and go to state 13
    transpose                      shift and go to state 14
    num                            shift and go to state 15
    assignable                     shift and go to state 16
    str                            shift and go to state 17
    special                        shift and go to state 18
    forloop                        shift and go to state 23
    whileloop                      shift and go to state 24
    brk                            shift and go to state 27
    cnt                            shift and go to state 28
    mutexp                         shift and go to state 30
    compexp                        shift and go to state 31
    int                            shift and go to state 32
    float                          shift and go to state 33

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .

    $end            reduce using rule 2 (instructions_opt -> instructions .)


state 4

    (4) instructions -> instruction . instructions
    (5) instructions -> instruction .
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment ;
    (8) instruction -> . ifexpr
    (9) instruction -> . loop
    (10) instruction -> . returnexpr ;
    (11) instruction -> . printexpr ;
    (12) instruction -> . breakOrContinue ;
    (13) instruction -> . complexinstruction
    (26) expression -> . binexp
    (27) expression -> . transpose
    (28) expression -> . num
    (29) expression -> . assignable
    (30) expression -> . str
    (31) expression -> . special ( expression )
    (32) expression -> . [ minit ]
    (33) expression -> . ( expression )
    (34) expression -> . - expression
    (19) assignment -> . assignable = expression
    (20) assignment -> . assignable ADDASSIGN expression
    (21) assignment -> . assignable SUBASSIGN expression
    (22) assignment -> . assignable MULASSIGN expression
    (23) assignment -> . assignable DIVASSIGN expression
    (65) ifexpr -> . IF ( expression ) instruction
    (66) ifexpr -> . IF ( expression ) instruction ELSE instruction
    (67) loop -> . forloop
    (68) loop -> . whileloop
    (72) returnexpr -> . RETURN expression
    (73) printexpr -> . PRINT printable
    (14) breakOrContinue -> . brk
    (15) breakOrContinue -> . cnt
    (18) complexinstruction -> . { instructions }
    (41) binexp -> . mutexp
    (42) binexp -> . compexp
    (36) transpose -> . expression '
    (37) num -> . int
    (38) num -> . float
    (24) assignable -> . ID
    (25) assignable -> . ID [ expression , expression ]
    (35) str -> . STRING
    (57) special -> . EYE
    (58) special -> . ZEROS
    (59) special -> . ONES
    (69) forloop -> . FOR ID = range instruction
    (70) whileloop -> . WHILE ( expression ) instruction
    (16) brk -> . BREAK
    (17) cnt -> . CONTINUE
    (43) mutexp -> . expression + expression
    (44) mutexp -> . expression - expression
    (45) mutexp -> . expression * expression
    (46) mutexp -> . expression / expression
    (47) mutexp -> . expression DOTADD expression
    (48) mutexp -> . expression DOTSUB expression
    (49) mutexp -> . expression DOTMUL expression
    (50) mutexp -> . expression DOTDIV expression
    (51) compexp -> . expression LE expression
    (52) compexp -> . expression GE expression
    (53) compexp -> . expression EQ expression
    (54) compexp -> . expression > expression
    (55) compexp -> . expression < expression
    (56) compexp -> . expression DIFF expression
    (39) int -> . INTNUM
    (40) float -> . FLOATNUM

    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)
    [               shift and go to state 20
    (               shift and go to state 19
    -               shift and go to state 21
    IF              shift and go to state 22
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    {               shift and go to state 29
    ID              shift and go to state 34
    STRING          shift and go to state 35
    EYE             shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    FOR             shift and go to state 39
    WHILE           shift and go to state 40
    BREAK           shift and go to state 41
    CONTINUE        shift and go to state 42
    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44

    instruction                    shift and go to state 4
    instructions                   shift and go to state 45
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    ifexpr                         shift and go to state 7
    loop                           shift and go to state 8
    returnexpr                     shift and go to state 9
    printexpr                      shift and go to state 10
    breakOrContinue                shift and go to state 11
    complexinstruction             shift and go to state 12
    binexp                         shift and go to state 13
    transpose                      shift and go to state 14
    num                            shift and go to state 15
    assignable                     shift and go to state 16
    str                            shift and go to state 17
    special                        shift and go to state 18
    forloop                        shift and go to state 23
    whileloop                      shift and go to state 24
    brk                            shift and go to state 27
    cnt                            shift and go to state 28
    mutexp                         shift and go to state 30
    compexp                        shift and go to state 31
    int                            shift and go to state 32
    float                          shift and go to state 33

state 5

    (6) instruction -> expression .
    (36) transpose -> expression . '
    (43) mutexp -> expression . + expression
    (44) mutexp -> expression . - expression
    (45) mutexp -> expression . * expression
    (46) mutexp -> expression . / expression
    (47) mutexp -> expression . DOTADD expression
    (48) mutexp -> expression . DOTSUB expression
    (49) mutexp -> expression . DOTMUL expression
    (50) mutexp -> expression . DOTDIV expression
    (51) compexp -> expression . LE expression
    (52) compexp -> expression . GE expression
    (53) compexp -> expression . EQ expression
    (54) compexp -> expression . > expression
    (55) compexp -> expression . < expression
    (56) compexp -> expression . DIFF expression

  ! shift/reduce conflict for - resolved as shift
    [               reduce using rule 6 (instruction -> expression .)
    (               reduce using rule 6 (instruction -> expression .)
    IF              reduce using rule 6 (instruction -> expression .)
    RETURN          reduce using rule 6 (instruction -> expression .)
    PRINT           reduce using rule 6 (instruction -> expression .)
    {               reduce using rule 6 (instruction -> expression .)
    ID              reduce using rule 6 (instruction -> expression .)
    STRING          reduce using rule 6 (instruction -> expression .)
    EYE             reduce using rule 6 (instruction -> expression .)
    ZEROS           reduce using rule 6 (instruction -> expression .)
    ONES            reduce using rule 6 (instruction -> expression .)
    FOR             reduce using rule 6 (instruction -> expression .)
    WHILE           reduce using rule 6 (instruction -> expression .)
    BREAK           reduce using rule 6 (instruction -> expression .)
    CONTINUE        reduce using rule 6 (instruction -> expression .)
    INTNUM          reduce using rule 6 (instruction -> expression .)
    FLOATNUM        reduce using rule 6 (instruction -> expression .)
    $end            reduce using rule 6 (instruction -> expression .)
    }               reduce using rule 6 (instruction -> expression .)
    ELSE            reduce using rule 6 (instruction -> expression .)
    '               shift and go to state 46
    +               shift and go to state 47
    -               shift and go to state 48
    *               shift and go to state 49
    /               shift and go to state 50
    DOTADD          shift and go to state 51
    DOTSUB          shift and go to state 52
    DOTMUL          shift and go to state 53
    DOTDIV          shift and go to state 54
    LE              shift and go to state 55
    GE              shift and go to state 56
    EQ              shift and go to state 57
    >               shift and go to state 58
    <               shift and go to state 59
    DIFF            shift and go to state 60

  ! -               [ reduce using rule 6 (instruction -> expression .) ]


state 6

    (7) instruction -> assignment . ;

    ;               shift and go to state 61


state 7

    (8) instruction -> ifexpr .

    [               reduce using rule 8 (instruction -> ifexpr .)
    (               reduce using rule 8 (instruction -> ifexpr .)
    -               reduce using rule 8 (instruction -> ifexpr .)
    IF              reduce using rule 8 (instruction -> ifexpr .)
    RETURN          reduce using rule 8 (instruction -> ifexpr .)
    PRINT           reduce using rule 8 (instruction -> ifexpr .)
    {               reduce using rule 8 (instruction -> ifexpr .)
    ID              reduce using rule 8 (instruction -> ifexpr .)
    STRING          reduce using rule 8 (instruction -> ifexpr .)
    EYE             reduce using rule 8 (instruction -> ifexpr .)
    ZEROS           reduce using rule 8 (instruction -> ifexpr .)
    ONES            reduce using rule 8 (instruction -> ifexpr .)
    FOR             reduce using rule 8 (instruction -> ifexpr .)
    WHILE           reduce using rule 8 (instruction -> ifexpr .)
    BREAK           reduce using rule 8 (instruction -> ifexpr .)
    CONTINUE        reduce using rule 8 (instruction -> ifexpr .)
    INTNUM          reduce using rule 8 (instruction -> ifexpr .)
    FLOATNUM        reduce using rule 8 (instruction -> ifexpr .)
    $end            reduce using rule 8 (instruction -> ifexpr .)
    }               reduce using rule 8 (instruction -> ifexpr .)
    ELSE            reduce using rule 8 (instruction -> ifexpr .)


state 8

    (9) instruction -> loop .

    [               reduce using rule 9 (instruction -> loop .)
    (               reduce using rule 9 (instruction -> loop .)
    -               reduce using rule 9 (instruction -> loop .)
    IF              reduce using rule 9 (instruction -> loop .)
    RETURN          reduce using rule 9 (instruction -> loop .)
    PRINT           reduce using rule 9 (instruction -> loop .)
    {               reduce using rule 9 (instruction -> loop .)
    ID              reduce using rule 9 (instruction -> loop .)
    STRING          reduce using rule 9 (instruction -> loop .)
    EYE             reduce using rule 9 (instruction -> loop .)
    ZEROS           reduce using rule 9 (instruction -> loop .)
    ONES            reduce using rule 9 (instruction -> loop .)
    FOR             reduce using rule 9 (instruction -> loop .)
    WHILE           reduce using rule 9 (instruction -> loop .)
    BREAK           reduce using rule 9 (instruction -> loop .)
    CONTINUE        reduce using rule 9 (instruction -> loop .)
    INTNUM          reduce using rule 9 (instruction -> loop .)
    FLOATNUM        reduce using rule 9 (instruction -> loop .)
    $end            reduce using rule 9 (instruction -> loop .)
    }               reduce using rule 9 (instruction -> loop .)
    ELSE            reduce using rule 9 (instruction -> loop .)


state 9

    (10) instruction -> returnexpr . ;

    ;               shift and go to state 62


state 10

    (11) instruction -> printexpr . ;

    ;               shift and go to state 63


state 11

    (12) instruction -> breakOrContinue . ;

    ;               shift and go to state 64


state 12

    (13) instruction -> complexinstruction .

    [               reduce using rule 13 (instruction -> complexinstruction .)
    (               reduce using rule 13 (instruction -> complexinstruction .)
    -               reduce using rule 13 (instruction -> complexinstruction .)
    IF              reduce using rule 13 (instruction -> complexinstruction .)
    RETURN          reduce using rule 13 (instruction -> complexinstruction .)
    PRINT           reduce using rule 13 (instruction -> complexinstruction .)
    {               reduce using rule 13 (instruction -> complexinstruction .)
    ID              reduce using rule 13 (instruction -> complexinstruction .)
    STRING          reduce using rule 13 (instruction -> complexinstruction .)
    EYE             reduce using rule 13 (instruction -> complexinstruction .)
    ZEROS           reduce using rule 13 (instruction -> complexinstruction .)
    ONES            reduce using rule 13 (instruction -> complexinstruction .)
    FOR             reduce using rule 13 (instruction -> complexinstruction .)
    WHILE           reduce using rule 13 (instruction -> complexinstruction .)
    BREAK           reduce using rule 13 (instruction -> complexinstruction .)
    CONTINUE        reduce using rule 13 (instruction -> complexinstruction .)
    INTNUM          reduce using rule 13 (instruction -> complexinstruction .)
    FLOATNUM        reduce using rule 13 (instruction -> complexinstruction .)
    $end            reduce using rule 13 (instruction -> complexinstruction .)
    }               reduce using rule 13 (instruction -> complexinstruction .)
    ELSE            reduce using rule 13 (instruction -> complexinstruction .)


state 13

    (26) expression -> binexp .

    '               reduce using rule 26 (expression -> binexp .)
    +               reduce using rule 26 (expression -> binexp .)
    -               reduce using rule 26 (expression -> binexp .)
    *               reduce using rule 26 (expression -> binexp .)
    /               reduce using rule 26 (expression -> binexp .)
    DOTADD          reduce using rule 26 (expression -> binexp .)
    DOTSUB          reduce using rule 26 (expression -> binexp .)
    DOTMUL          reduce using rule 26 (expression -> binexp .)
    DOTDIV          reduce using rule 26 (expression -> binexp .)
    LE              reduce using rule 26 (expression -> binexp .)
    GE              reduce using rule 26 (expression -> binexp .)
    EQ              reduce using rule 26 (expression -> binexp .)
    >               reduce using rule 26 (expression -> binexp .)
    <               reduce using rule 26 (expression -> binexp .)
    DIFF            reduce using rule 26 (expression -> binexp .)
    [               reduce using rule 26 (expression -> binexp .)
    (               reduce using rule 26 (expression -> binexp .)
    IF              reduce using rule 26 (expression -> binexp .)
    RETURN          reduce using rule 26 (expression -> binexp .)
    PRINT           reduce using rule 26 (expression -> binexp .)
    {               reduce using rule 26 (expression -> binexp .)
    ID              reduce using rule 26 (expression -> binexp .)
    STRING          reduce using rule 26 (expression -> binexp .)
    EYE             reduce using rule 26 (expression -> binexp .)
    ZEROS           reduce using rule 26 (expression -> binexp .)
    ONES            reduce using rule 26 (expression -> binexp .)
    FOR             reduce using rule 26 (expression -> binexp .)
    WHILE           reduce using rule 26 (expression -> binexp .)
    BREAK           reduce using rule 26 (expression -> binexp .)
    CONTINUE        reduce using rule 26 (expression -> binexp .)
    INTNUM          reduce using rule 26 (expression -> binexp .)
    FLOATNUM        reduce using rule 26 (expression -> binexp .)
    $end            reduce using rule 26 (expression -> binexp .)
    }               reduce using rule 26 (expression -> binexp .)
    )               reduce using rule 26 (expression -> binexp .)
    ,               reduce using rule 26 (expression -> binexp .)
    ]               reduce using rule 26 (expression -> binexp .)
    ;               reduce using rule 26 (expression -> binexp .)
    :               reduce using rule 26 (expression -> binexp .)
    ELSE            reduce using rule 26 (expression -> binexp .)


state 14

    (27) expression -> transpose .

    '               reduce using rule 27 (expression -> transpose .)
    +               reduce using rule 27 (expression -> transpose .)
    -               reduce using rule 27 (expression -> transpose .)
    *               reduce using rule 27 (expression -> transpose .)
    /               reduce using rule 27 (expression -> transpose .)
    DOTADD          reduce using rule 27 (expression -> transpose .)
    DOTSUB          reduce using rule 27 (expression -> transpose .)
    DOTMUL          reduce using rule 27 (expression -> transpose .)
    DOTDIV          reduce using rule 27 (expression -> transpose .)
    LE              reduce using rule 27 (expression -> transpose .)
    GE              reduce using rule 27 (expression -> transpose .)
    EQ              reduce using rule 27 (expression -> transpose .)
    >               reduce using rule 27 (expression -> transpose .)
    <               reduce using rule 27 (expression -> transpose .)
    DIFF            reduce using rule 27 (expression -> transpose .)
    [               reduce using rule 27 (expression -> transpose .)
    (               reduce using rule 27 (expression -> transpose .)
    IF              reduce using rule 27 (expression -> transpose .)
    RETURN          reduce using rule 27 (expression -> transpose .)
    PRINT           reduce using rule 27 (expression -> transpose .)
    {               reduce using rule 27 (expression -> transpose .)
    ID              reduce using rule 27 (expression -> transpose .)
    STRING          reduce using rule 27 (expression -> transpose .)
    EYE             reduce using rule 27 (expression -> transpose .)
    ZEROS           reduce using rule 27 (expression -> transpose .)
    ONES            reduce using rule 27 (expression -> transpose .)
    FOR             reduce using rule 27 (expression -> transpose .)
    WHILE           reduce using rule 27 (expression -> transpose .)
    BREAK           reduce using rule 27 (expression -> transpose .)
    CONTINUE        reduce using rule 27 (expression -> transpose .)
    INTNUM          reduce using rule 27 (expression -> transpose .)
    FLOATNUM        reduce using rule 27 (expression -> transpose .)
    $end            reduce using rule 27 (expression -> transpose .)
    }               reduce using rule 27 (expression -> transpose .)
    )               reduce using rule 27 (expression -> transpose .)
    ,               reduce using rule 27 (expression -> transpose .)
    ]               reduce using rule 27 (expression -> transpose .)
    ;               reduce using rule 27 (expression -> transpose .)
    :               reduce using rule 27 (expression -> transpose .)
    ELSE            reduce using rule 27 (expression -> transpose .)


state 15

    (28) expression -> num .

    '               reduce using rule 28 (expression -> num .)
    +               reduce using rule 28 (expression -> num .)
    -               reduce using rule 28 (expression -> num .)
    *               reduce using rule 28 (expression -> num .)
    /               reduce using rule 28 (expression -> num .)
    DOTADD          reduce using rule 28 (expression -> num .)
    DOTSUB          reduce using rule 28 (expression -> num .)
    DOTMUL          reduce using rule 28 (expression -> num .)
    DOTDIV          reduce using rule 28 (expression -> num .)
    LE              reduce using rule 28 (expression -> num .)
    GE              reduce using rule 28 (expression -> num .)
    EQ              reduce using rule 28 (expression -> num .)
    >               reduce using rule 28 (expression -> num .)
    <               reduce using rule 28 (expression -> num .)
    DIFF            reduce using rule 28 (expression -> num .)
    [               reduce using rule 28 (expression -> num .)
    (               reduce using rule 28 (expression -> num .)
    IF              reduce using rule 28 (expression -> num .)
    RETURN          reduce using rule 28 (expression -> num .)
    PRINT           reduce using rule 28 (expression -> num .)
    {               reduce using rule 28 (expression -> num .)
    ID              reduce using rule 28 (expression -> num .)
    STRING          reduce using rule 28 (expression -> num .)
    EYE             reduce using rule 28 (expression -> num .)
    ZEROS           reduce using rule 28 (expression -> num .)
    ONES            reduce using rule 28 (expression -> num .)
    FOR             reduce using rule 28 (expression -> num .)
    WHILE           reduce using rule 28 (expression -> num .)
    BREAK           reduce using rule 28 (expression -> num .)
    CONTINUE        reduce using rule 28 (expression -> num .)
    INTNUM          reduce using rule 28 (expression -> num .)
    FLOATNUM        reduce using rule 28 (expression -> num .)
    $end            reduce using rule 28 (expression -> num .)
    }               reduce using rule 28 (expression -> num .)
    )               reduce using rule 28 (expression -> num .)
    ,               reduce using rule 28 (expression -> num .)
    ]               reduce using rule 28 (expression -> num .)
    ;               reduce using rule 28 (expression -> num .)
    :               reduce using rule 28 (expression -> num .)
    ELSE            reduce using rule 28 (expression -> num .)


state 16

    (29) expression -> assignable .
    (19) assignment -> assignable . = expression
    (20) assignment -> assignable . ADDASSIGN expression
    (21) assignment -> assignable . SUBASSIGN expression
    (22) assignment -> assignable . MULASSIGN expression
    (23) assignment -> assignable . DIVASSIGN expression
